<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_StatusBits" Id="{b326481b-f8ef-4337-808b-4e049301a5f5}">
    <Declaration><![CDATA[TYPE ST_StatusBits :
STRUCT
	Starting	:BIT;
	Stopping	:BIT;
	Resting 	:BIT;
	Running		:BIT;
	bit5		:BIT;
	bit6		:BIT;
	bit7		:BIT;
	bit8		:BIT;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>